# spinnaker-webcam

./: CMakeLists.txt  README.md  main.cpp
cmake/: SpinnakerConfig.cmake  SpinnakerConfigVersion.cmake  find_spinnaker_header.cmake
